# labs

./: .gitignore  README.md
advanced_functional_programming/replay/: replay.cabal  stack.yaml
advanced_functional_programming/replay/app/: Main.hs
advanced_functional_programming/replay/src/: Replay.hs  Replay.hs~  ReplayWeb.hs  SReplay.hs  SReplay.hs~
advanced_functional_programming/replay/test/: ReplayQuickCheck.hs  TestCut.hs  TestIO.hs  TestMonadLaws.hs  TestState.hs
advanced_functional_programming/turtle/: Turtle.hs  TurtleDeep.hs  TurtleExtras.hs  TurtleGraphical.hs  TurtleSpiral.hs  turtle-graphics.cabal
alg_for_machine_learning/: Havström_Wang_Hw1.ipynb  Havström_Wang_Hw2.ipynb  Havström_Wang_Hw3.ipynb  Havström_Wang_Hw4a.ipynb  Havström_Wang_Hw4b.ipynb  Havström_Wang_Hw5.ipynb
alg_for_machine_learning/.ipynb_checkpoints/: HW2_2020_Bayesian-checkpoint.ipynb  HW3_2020-checkpoint.ipynb  HW4a_2020-checkpoint.ipynb  HW4b_2020-checkpoint.ipynb  Havström_Wang_Hw1-checkpoint.ipynb  Havström_Wang_Hw3-checkpoint.ipynb  Havström_Wang_Hw4a-checkpoint.ipynb  Hw4a-checkpoint.ipynb  Hw5_2020-checkpoint.ipynb  autograd_tutorial-checkpoint.ipynb  char_rnn_classification_tutorial-checkpoint.ipynb
algorithms_advanced/1/: solution_ass1.tex
algorithms_advanced/2/: solution_ass2.aux  solution_ass2.tex
algorithms_advanced/3/: solution_ass3.tex
algorithms_advanced/exam/: exam.tex
compiler_construction/: Makefile
compiler_construction/doc/: Info
compiler_construction/javalette/: ChangeLog.md  README.md  javalette.cabal  package.yaml  stack.yaml
compiler_construction/src/: AbsJavalette.hs  CodeGen.hs  CodeGenUtil.hs  Exception.hs  LexJavalette.hs  Main.hs  ParJavalette.hs  PrintJavalette.hs  TypeCheckUtil.hs  TypeChecker.hs  javalette.cf  package.yaml
discrete_optimization/: HW3-2020-Copy1.ipynb  hw2020-1-1.ipynb  hw2020-2.ipynb  hw2020-4.ipynb
programming language techniques/: README.md
programming language techniques/lab1/: lab1.cf
programming language techniques/lab_1/: README.md  lab1.cf
programming_language_techniques/lab2/: BOperator.java  CMM.cf  Env.java  EvalTool.java  FunType.java  FunWithEnv.java  Interpreter.java  InterpreterException.java  InterpreterVisitor.java  Makefile  TypeCheckTool.java  TypeCheckVisitor.java  TypeChecker.java  TypeCode.java  lab2.bat  (+3 more)
(+36 files in other folders)
