name:           replay
version:        0.1.0.0
description:    a library exposes 'Replay' monad and an executable web application
author:         Jacob John Nilsson & Qufei Wang
maintainer:     acobjnilsson@gmail.com & wangqufei2009@gmail.com
license:        BSD3
license-file:   LICENSE
category:       Development
build-type:     Simple
extra-source-files: README.md, ChangeLog.md
cabal-version:  >= 2.0

library
  exposed-modules:
      Replay
      ReplayWeb
      SReplay
  hs-source-dirs:
      src
  build-depends:
      base == 4.13.* && <5, mtl >= 2.2.1, time, transformers, QuickCheck >= 2.13.2,
      base64-string >= 0.2, blaze-html >= 0.9.1.2, containers >= 0.5.7.1,
      regex-posix >= 0.95.2, scotty >= 0.11.5, text >= 1.2.4.0
  default-language: Haskell2010

executable web
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base == 4.13.*, replay, scotty >= 0.11.5
  default-language: Haskell2010

test-suite test-replay-io
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestIO.hs
  build-depends:       replay, base, mtl >= 2.2.1, time
  default-language:    Haskell2010

test-suite test-replay-state
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestState.hs
  build-depends:       replay, base, mtl >= 2.2.1, time
  default-language:    Haskell2010

test-suite test-replay-monadLaws
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMonadLaws.hs
  build-depends:       replay, base, mtl >= 2.2.1, time
  default-language:    Haskell2010

test-suite test-replay-quickcheck
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ReplayQuickCheck.hs
  build-depends:       replay, base, mtl >= 2.2.1, time, QuickCheck >= 2.13.2
  default-language:    Haskell2010

test-suite test-cut
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestCut.hs
  build-depends:       replay, base, mtl >= 2.2.1, time, QuickCheck >= 2.13.2, containers
  default-language:    Haskell2010
